<package>
  <name>test_roslaunch</name>
  <version>1.12.16</version>
  <description>
    Tests for roslaunch which depend on rostest.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roslaunch</url>
  <author>Ken Conley</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <test_depend>python-rospkg</test_depend>
  <test_depend>rosgraph</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
