<package>
  <name>test_roslib_comm</name>
  <version>1.13.6</version>
  <description>
    Unit tests verifying that roslib is operating as expected.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roslib</url>
  <author>Jeremy Leibs</author>
  <author>Ken Conley</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <test_depend>genpy</test_depend>
  <test_depend>roslib</test_depend>
</package>
