<package>
  <name>test_rosmaster</name>
  <version>1.9.43</version>
  <description>
    Tests for rosmaster which depend on rostest.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosmaster</url>
  <author>Ken Conley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rostest</build_depend>
</package>
