<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_rosparam</name>
  <version>1.15.0</version>
  <description>
    A package containing the unit tests for rosparam.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rosparam</url>
  <url type="bugtracker">https://github.com/ros/ros_comm/issues</url>
  <url type="repository">https://github.com/ros/ros_comm</url>
  <author>Ken Conley</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</test_depend>
  <test_depend>rosgraph</test_depend>
  <test_depend>rosparam</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
