<package>
  <name>test_rosparam</name>
  <version>1.12.16</version>
  <description>
    A package containing the unit tests for rosparam.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosparam</url>
  <author>Ken Conley</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <test_depend>python-yaml</test_depend>
  <test_depend>rosgraph</test_depend>
  <test_depend>rosparam</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
