<package>
  <name>test_rospy</name>
  <version>1.9.40</version>
  <description>
    rospy unit and integration test framework.
  </description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rospy</url>
  <author>Ken Conley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>test_rosmaster</build_depend>

  <test_depend>python-numpy</test_depend>
  <test_depend>rosgraph</test_depend>
  <test_depend>rospy</test_depend>
</package>
