<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_rospy</name>
  <version>1.15.3</version>
  <description>
    rospy unit and integration test framework.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rospy</url>
  <url type="bugtracker">https://github.com/ros/ros_comm/issues</url>
  <url type="repository">https://github.com/ros/ros_comm</url>
  <author>Ken Conley</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>test_rosmaster</build_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</test_depend>
  <test_depend>rosbuild</test_depend>
  <test_depend>rosgraph</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostopic</test_depend>
</package>
