<package>
  <name>test_rostest</name>
  <version>1.16.0</version>
  <description>
    Tests for rostest.
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rostest</url>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <test_depend>rostopic</test_depend>
</package>
