<package>
  <name>test_rostopic</name>
  <version>1.11.18</version>
  <description>
    Tests for rostopic.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rostopic</url>
  <author>Ken Conley</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>genpy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <test_depend>rostopic</test_depend>
</package>
